[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "webhooky"
version = "0.4.0"
description = "Simple Pydantic-based webhook event processing"
requires-python = ">=3.11"
authors = [{name = "Bullish Design"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7",
]

keywords = ["webhooks", "events", "validation", "pydantic", "async"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.111", "uvicorn>=0.30"]
cli = ["typer", "rich"]
all = ["webhooky[fastapi,cli]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Bullish-Design/webhooky"
Repository = "https://github.com/Bullish-Design/webhooky"

[project.scripts]
webhooky = "webhooky.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "W", "UP", "B"]
lint.ignore = ["E501", "W293"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
